fix(movie): Make small fix to Dto and service layer of Movie feature